--- a/uni.scss
+++ b/uni.scss
@@ -27,7 +27,7 @@ $uni-text-color-inverse:#fff;//反色
 $uni-text-color-grey:#999;//辅助灰色，如加载更多的提示信息
 $uni-text-color-placeholder: #808080;
 $uni-text-color-disable:#c0c0c0;
-
+$font-color-base:#ggg;
 /* 背景颜色 */
 $uni-bg-color:#ff699c;
 $uni-bg-color-grey:#f8f8f8;
